[gd_scene load_steps=8 format=4 uid="uid://cicvfpmq5ime2"]

[ext_resource type="Script" uid="uid://bvolp5rut4seb" path="res://trash/script/items.gd" id="1_t4tb0"]
[ext_resource type="Script" uid="uid://33qix4lv4bth" path="res://trash/script/item.gd" id="2_sxnej"]
[ext_resource type="Texture2D" uid="uid://r7gqfmk27gou" path="res://enemies/assets/Imagens PNG Servolo (1).png" id="4_g8i66"]
[ext_resource type="PackedScene" uid="uid://5ypvcel7aw54" path="res://KeyboardLabel/Label_keyboard.tscn" id="4_lvia1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_is7oy"]
texture = ExtResource("4_g8i66")
43:14/0 = 0
44:14/0 = 0
45:14/0 = 0
46:14/0 = 0
42:15/0 = 0
43:15/0 = 0
44:15/0 = 0
45:15/0 = 0
46:15/0 = 0
47:15/0 = 0
48:15/0 = 0
71:15/0 = 0
72:15/0 = 0
73:15/0 = 0
43:16/0 = 0
44:16/0 = 0
45:16/0 = 0
46:16/0 = 0
47:16/0 = 0
48:16/0 = 0
54:16/0 = 0
55:16/0 = 0
56:16/0 = 0
57:16/0 = 0
58:16/0 = 0
61:16/0 = 0
70:16/0 = 0
71:16/0 = 0
72:16/0 = 0
73:16/0 = 0
74:16/0 = 0
43:17/0 = 0
44:17/0 = 0
45:17/0 = 0
46:17/0 = 0
47:17/0 = 0
52:17/0 = 0
53:17/0 = 0
54:17/0 = 0
55:17/0 = 0
56:17/0 = 0
57:17/0 = 0
58:17/0 = 0
60:17/0 = 0
61:17/0 = 0
62:17/0 = 0
63:17/0 = 0
70:17/0 = 0
71:17/0 = 0
72:17/0 = 0
73:17/0 = 0
74:17/0 = 0
42:18/0 = 0
43:18/0 = 0
44:18/0 = 0
45:18/0 = 0
46:18/0 = 0
47:18/0 = 0
48:18/0 = 0
52:18/0 = 0
53:18/0 = 0
54:18/0 = 0
55:18/0 = 0
56:18/0 = 0
57:18/0 = 0
58:18/0 = 0
59:18/0 = 0
60:18/0 = 0
61:18/0 = 0
62:18/0 = 0
63:18/0 = 0
68:18/0 = 0
69:18/0 = 0
70:18/0 = 0
71:18/0 = 0
72:18/0 = 0
73:18/0 = 0
74:18/0 = 0
76:18/0 = 0
77:18/0 = 0
42:19/0 = 0
43:19/0 = 0
44:19/0 = 0
45:19/0 = 0
46:19/0 = 0
47:19/0 = 0
48:19/0 = 0
52:19/0 = 0
53:19/0 = 0
54:19/0 = 0
60:19/0 = 0
61:19/0 = 0
62:19/0 = 0
63:19/0 = 0
64:19/0 = 0
66:19/0 = 0
67:19/0 = 0
68:19/0 = 0
69:19/0 = 0
70:19/0 = 0
71:19/0 = 0
72:19/0 = 0
73:19/0 = 0
74:19/0 = 0
75:19/0 = 0
76:19/0 = 0
77:19/0 = 0
42:20/0 = 0
43:20/0 = 0
44:20/0 = 0
45:20/0 = 0
46:20/0 = 0
47:20/0 = 0
48:20/0 = 0
51:20/0 = 0
52:20/0 = 0
53:20/0 = 0
54:20/0 = 0
55:20/0 = 0
61:20/0 = 0
62:20/0 = 0
63:20/0 = 0
64:20/0 = 0
65:20/0 = 0
66:20/0 = 0
67:20/0 = 0
68:20/0 = 0
69:20/0 = 0
70:20/0 = 0
71:20/0 = 0
72:20/0 = 0
73:20/0 = 0
74:20/0 = 0
75:20/0 = 0
76:20/0 = 0
77:20/0 = 0
41:21/0 = 0
42:21/0 = 0
43:21/0 = 0
44:21/0 = 0
45:21/0 = 0
46:21/0 = 0
47:21/0 = 0
48:21/0 = 0
51:21/0 = 0
52:21/0 = 0
53:21/0 = 0
54:21/0 = 0
55:21/0 = 0
56:21/0 = 0
58:21/0 = 0
59:21/0 = 0
60:21/0 = 0
61:21/0 = 0
62:21/0 = 0
63:21/0 = 0
64:21/0 = 0
65:21/0 = 0
66:21/0 = 0
67:21/0 = 0
68:21/0 = 0
69:21/0 = 0
70:21/0 = 0
71:21/0 = 0
72:21/0 = 0
73:21/0 = 0
74:21/0 = 0
75:21/0 = 0
76:21/0 = 0
77:21/0 = 0
41:22/0 = 0
42:22/0 = 0
43:22/0 = 0
44:22/0 = 0
45:22/0 = 0
46:22/0 = 0
47:22/0 = 0
48:22/0 = 0
49:22/0 = 0
51:22/0 = 0
52:22/0 = 0
53:22/0 = 0
54:22/0 = 0
55:22/0 = 0
56:22/0 = 0
57:22/0 = 0
58:22/0 = 0
59:22/0 = 0
60:22/0 = 0
61:22/0 = 0
62:22/0 = 0
70:22/0 = 0
71:22/0 = 0
72:22/0 = 0
73:22/0 = 0
74:22/0 = 0
75:22/0 = 0
41:23/0 = 0
42:23/0 = 0
43:23/0 = 0
44:23/0 = 0
45:23/0 = 0
46:23/0 = 0
47:23/0 = 0
48:23/0 = 0
49:23/0 = 0
53:23/0 = 0
54:23/0 = 0
55:23/0 = 0
56:23/0 = 0
57:23/0 = 0
58:23/0 = 0
59:23/0 = 0
60:23/0 = 0
61:23/0 = 0
72:23/0 = 0
73:23/0 = 0
43:24/0 = 0
44:24/0 = 0
45:24/0 = 0
46:24/0 = 0
63:25/0 = 0
64:25/0 = 0
65:25/0 = 0
41:26/0 = 0
42:26/0 = 0
43:26/0 = 0
46:26/0 = 0
47:26/0 = 0
48:26/0 = 0
51:26/0 = 0
52:26/0 = 0
54:26/0 = 0
55:26/0 = 0
56:26/0 = 0
63:26/0 = 0
64:26/0 = 0
65:26/0 = 0
66:26/0 = 0
67:26/0 = 0
68:26/0 = 0
41:27/0 = 0
42:27/0 = 0
43:27/0 = 0
44:27/0 = 0
45:27/0 = 0
46:27/0 = 0
47:27/0 = 0
48:27/0 = 0
51:27/0 = 0
52:27/0 = 0
53:27/0 = 0
54:27/0 = 0
55:27/0 = 0
56:27/0 = 0
63:27/0 = 0
64:27/0 = 0
65:27/0 = 0
66:27/0 = 0
67:27/0 = 0
68:27/0 = 0
69:27/0 = 0
70:27/0 = 0
71:27/0 = 0
72:27/0 = 0
73:27/0 = 0
74:27/0 = 0
41:28/0 = 0
42:28/0 = 0
43:28/0 = 0
44:28/0 = 0
45:28/0 = 0
46:28/0 = 0
47:28/0 = 0
48:28/0 = 0
51:28/0 = 0
52:28/0 = 0
53:28/0 = 0
54:28/0 = 0
55:28/0 = 0
56:28/0 = 0
57:28/0 = 0
58:28/0 = 0
59:28/0 = 0
62:28/0 = 0
63:28/0 = 0
64:28/0 = 0
65:28/0 = 0
66:28/0 = 0
67:28/0 = 0
68:28/0 = 0
69:28/0 = 0
70:28/0 = 0
71:28/0 = 0
72:28/0 = 0
73:28/0 = 0
74:28/0 = 0
76:28/0 = 0
77:28/0 = 0
78:28/0 = 0
42:29/0 = 0
43:29/0 = 0
44:29/0 = 0
45:29/0 = 0
46:29/0 = 0
47:29/0 = 0
48:29/0 = 0
51:29/0 = 0
52:29/0 = 0
53:29/0 = 0
54:29/0 = 0
55:29/0 = 0
56:29/0 = 0
57:29/0 = 0
58:29/0 = 0
59:29/0 = 0
62:29/0 = 0
63:29/0 = 0
64:29/0 = 0
65:29/0 = 0
66:29/0 = 0
67:29/0 = 0
68:29/0 = 0
69:29/0 = 0
70:29/0 = 0
71:29/0 = 0
72:29/0 = 0
73:29/0 = 0
74:29/0 = 0
75:29/0 = 0
76:29/0 = 0
77:29/0 = 0
78:29/0 = 0
42:30/0 = 0
43:30/0 = 0
44:30/0 = 0
45:30/0 = 0
46:30/0 = 0
47:30/0 = 0
48:30/0 = 0
53:30/0 = 0
54:30/0 = 0
55:30/0 = 0
56:30/0 = 0
57:30/0 = 0
58:30/0 = 0
59:30/0 = 0
63:30/0 = 0
64:30/0 = 0
65:30/0 = 0
66:30/0 = 0
67:30/0 = 0
68:30/0 = 0
69:30/0 = 0
70:30/0 = 0
71:30/0 = 0
72:30/0 = 0
73:30/0 = 0
74:30/0 = 0
75:30/0 = 0
76:30/0 = 0
43:31/0 = 0
44:31/0 = 0
45:31/0 = 0
46:31/0 = 0
47:31/0 = 0
48:31/0 = 0
53:31/0 = 0
54:31/0 = 0
55:31/0 = 0
56:31/0 = 0
57:31/0 = 0
58:31/0 = 0
63:31/0 = 0
64:31/0 = 0
65:31/0 = 0
66:31/0 = 0
67:31/0 = 0
70:31/0 = 0
71:31/0 = 0
72:31/0 = 0
73:31/0 = 0
74:31/0 = 0
75:31/0 = 0
76:31/0 = 0
77:31/0 = 0
43:32/0 = 0
44:32/0 = 0
45:32/0 = 0
50:32/0 = 0
51:32/0 = 0
54:32/0 = 0
55:32/0 = 0
56:32/0 = 0
64:32/0 = 0
65:32/0 = 0
66:32/0 = 0
70:32/0 = 0
71:32/0 = 0
73:32/0 = 0
49:33/0 = 0
50:33/0 = 0
51:33/0 = 0
66:33/0 = 0
47:34/0 = 0
48:34/0 = 0
49:34/0 = 0
50:34/0 = 0
51:34/0 = 0
46:35/0 = 0
47:35/0 = 0
48:35/0 = 0
49:35/0 = 0
50:35/0 = 0
73:35/0 = 0
74:35/0 = 0
47:36/0 = 0
48:36/0 = 0
49:36/0 = 0
50:36/0 = 0
55:36/0 = 0
56:36/0 = 0
57:36/0 = 0
58:36/0 = 0
65:36/0 = 0
66:36/0 = 0
67:36/0 = 0
68:36/0 = 0
69:36/0 = 0
70:36/0 = 0
72:36/0 = 0
73:36/0 = 0
74:36/0 = 0
75:36/0 = 0
76:36/0 = 0
77:36/0 = 0
46:37/0 = 0
47:37/0 = 0
48:37/0 = 0
49:37/0 = 0
50:37/0 = 0
51:37/0 = 0
54:37/0 = 0
55:37/0 = 0
56:37/0 = 0
57:37/0 = 0
58:37/0 = 0
59:37/0 = 0
60:37/0 = 0
61:37/0 = 0
62:37/0 = 0
65:37/0 = 0
66:37/0 = 0
67:37/0 = 0
68:37/0 = 0
69:37/0 = 0
70:37/0 = 0
71:37/0 = 0
72:37/0 = 0
73:37/0 = 0
74:37/0 = 0
75:37/0 = 0
76:37/0 = 0
77:37/0 = 0
78:37/0 = 0
46:38/0 = 0
47:38/0 = 0
48:38/0 = 0
49:38/0 = 0
50:38/0 = 0
54:38/0 = 0
55:38/0 = 0
56:38/0 = 0
57:38/0 = 0
58:38/0 = 0
59:38/0 = 0
60:38/0 = 0
61:38/0 = 0
62:38/0 = 0
65:38/0 = 0
66:38/0 = 0
67:38/0 = 0
68:38/0 = 0
69:38/0 = 0
70:38/0 = 0
71:38/0 = 0
72:38/0 = 0
73:38/0 = 0
74:38/0 = 0
75:38/0 = 0
76:38/0 = 0
77:38/0 = 0
78:38/0 = 0
45:39/0 = 0
46:39/0 = 0
47:39/0 = 0
48:39/0 = 0
54:39/0 = 0
55:39/0 = 0
56:39/0 = 0
57:39/0 = 0
58:39/0 = 0
59:39/0 = 0
60:39/0 = 0
61:39/0 = 0
62:39/0 = 0
65:39/0 = 0
66:39/0 = 0
67:39/0 = 0
68:39/0 = 0
69:39/0 = 0
70:39/0 = 0
72:39/0 = 0
73:39/0 = 0
74:39/0 = 0
75:39/0 = 0
76:39/0 = 0
77:39/0 = 0
78:39/0 = 0
43:40/0 = 0
44:40/0 = 0
45:40/0 = 0
46:40/0 = 0
47:40/0 = 0
48:40/0 = 0
54:40/0 = 0
55:40/0 = 0
56:40/0 = 0
57:40/0 = 0
58:40/0 = 0
59:40/0 = 0
60:40/0 = 0
61:40/0 = 0
62:40/0 = 0
63:40/0 = 0
65:40/0 = 0
66:40/0 = 0
67:40/0 = 0
68:40/0 = 0
69:40/0 = 0
70:40/0 = 0
72:40/0 = 0
73:40/0 = 0
74:40/0 = 0
75:40/0 = 0
76:40/0 = 0
77:40/0 = 0
42:41/0 = 0
43:41/0 = 0
44:41/0 = 0
45:41/0 = 0
46:41/0 = 0
47:41/0 = 0
48:41/0 = 0
49:41/0 = 0
54:41/0 = 0
55:41/0 = 0
56:41/0 = 0
57:41/0 = 0
58:41/0 = 0
59:41/0 = 0
60:41/0 = 0
61:41/0 = 0
62:41/0 = 0
63:41/0 = 0
66:41/0 = 0
67:41/0 = 0
68:41/0 = 0
69:41/0 = 0
72:41/0 = 0
73:41/0 = 0
74:41/0 = 0
75:41/0 = 0
41:42/0 = 0
42:42/0 = 0
43:42/0 = 0
44:42/0 = 0
45:42/0 = 0
46:42/0 = 0
47:42/0 = 0
48:42/0 = 0
49:42/0 = 0
50:42/0 = 0
55:42/0 = 0
56:42/0 = 0
57:42/0 = 0
58:42/0 = 0
61:42/0 = 0
62:42/0 = 0
67:42/0 = 0
68:42/0 = 0
69:42/0 = 0
73:42/0 = 0
41:43/0 = 0
42:43/0 = 0
43:43/0 = 0
44:43/0 = 0
45:43/0 = 0
46:43/0 = 0
47:43/0 = 0
48:43/0 = 0
49:43/0 = 0
50:43/0 = 0
70:43/0 = 0
71:43/0 = 0
72:43/0 = 0
74:43/0 = 0
75:43/0 = 0
76:43/0 = 0
70:44/0 = 0
71:44/0 = 0
72:44/0 = 0
74:44/0 = 0
75:44/0 = 0
76:44/0 = 0
53:45/0 = 0
54:45/0 = 0
55:45/0 = 0
56:45/0 = 0
57:45/0 = 0
70:45/0 = 0
71:45/0 = 0
74:45/0 = 0
75:45/0 = 0
76:45/0 = 0
44:46/0 = 0
45:46/0 = 0
46:46/0 = 0
48:46/0 = 0
49:46/0 = 0
50:46/0 = 0
53:46/0 = 0
54:46/0 = 0
55:46/0 = 0
56:46/0 = 0
57:46/0 = 0
69:46/0 = 0
70:46/0 = 0
71:46/0 = 0
72:46/0 = 0
73:46/0 = 0
74:46/0 = 0
75:46/0 = 0
76:46/0 = 0
77:46/0 = 0
42:47/0 = 0
43:47/0 = 0
44:47/0 = 0
45:47/0 = 0
46:47/0 = 0
48:47/0 = 0
49:47/0 = 0
50:47/0 = 0
53:47/0 = 0
54:47/0 = 0
55:47/0 = 0
56:47/0 = 0
57:47/0 = 0
58:47/0 = 0
59:47/0 = 0
60:47/0 = 0
61:47/0 = 0
62:47/0 = 0
63:47/0 = 0
69:47/0 = 0
70:47/0 = 0
71:47/0 = 0
72:47/0 = 0
73:47/0 = 0
74:47/0 = 0
75:47/0 = 0
76:47/0 = 0
77:47/0 = 0
41:48/0 = 0
42:48/0 = 0
43:48/0 = 0
44:48/0 = 0
45:48/0 = 0
46:48/0 = 0
47:48/0 = 0
48:48/0 = 0
49:48/0 = 0
50:48/0 = 0
52:48/0 = 0
53:48/0 = 0
54:48/0 = 0
55:48/0 = 0
56:48/0 = 0
57:48/0 = 0
58:48/0 = 0
59:48/0 = 0
60:48/0 = 0
61:48/0 = 0
62:48/0 = 0
63:48/0 = 0
64:48/0 = 0
65:48/0 = 0
66:48/0 = 0
69:48/0 = 0
70:48/0 = 0
71:48/0 = 0
72:48/0 = 0
73:48/0 = 0
74:48/0 = 0
75:48/0 = 0
76:48/0 = 0
77:48/0 = 0
41:49/0 = 0
42:49/0 = 0
43:49/0 = 0
44:49/0 = 0
45:49/0 = 0
46:49/0 = 0
47:49/0 = 0
48:49/0 = 0
49:49/0 = 0
50:49/0 = 0
51:49/0 = 0
52:49/0 = 0
53:49/0 = 0
54:49/0 = 0
55:49/0 = 0
56:49/0 = 0
57:49/0 = 0
58:49/0 = 0
59:49/0 = 0
60:49/0 = 0
61:49/0 = 0
62:49/0 = 0
63:49/0 = 0
64:49/0 = 0
65:49/0 = 0
66:49/0 = 0
67:49/0 = 0
69:49/0 = 0
70:49/0 = 0
71:49/0 = 0
72:49/0 = 0
73:49/0 = 0
74:49/0 = 0
75:49/0 = 0
76:49/0 = 0
77:49/0 = 0
41:50/0 = 0
42:50/0 = 0
43:50/0 = 0
44:50/0 = 0
45:50/0 = 0
46:50/0 = 0
47:50/0 = 0
48:50/0 = 0
49:50/0 = 0
50:50/0 = 0
51:50/0 = 0
52:50/0 = 0
53:50/0 = 0
54:50/0 = 0
55:50/0 = 0
56:50/0 = 0
57:50/0 = 0
60:50/0 = 0
61:50/0 = 0
62:50/0 = 0
63:50/0 = 0
64:50/0 = 0
65:50/0 = 0
66:50/0 = 0
67:50/0 = 0
69:50/0 = 0
70:50/0 = 0
71:50/0 = 0
72:50/0 = 0
73:50/0 = 0
74:50/0 = 0
75:50/0 = 0
76:50/0 = 0
77:50/0 = 0
42:51/0 = 0
43:51/0 = 0
44:51/0 = 0
45:51/0 = 0
46:51/0 = 0
47:51/0 = 0
48:51/0 = 0
49:51/0 = 0
50:51/0 = 0
51:51/0 = 0
53:51/0 = 0
54:51/0 = 0
55:51/0 = 0
56:51/0 = 0
57:51/0 = 0
62:51/0 = 0
63:51/0 = 0
64:51/0 = 0
65:51/0 = 0
66:51/0 = 0
69:51/0 = 0
70:51/0 = 0
71:51/0 = 0
72:51/0 = 0
73:51/0 = 0
74:51/0 = 0
75:51/0 = 0
76:51/0 = 0
77:51/0 = 0
42:52/0 = 0
43:52/0 = 0
44:52/0 = 0
45:52/0 = 0
46:52/0 = 0
47:52/0 = 0
48:52/0 = 0
49:52/0 = 0
50:52/0 = 0
51:52/0 = 0
65:52/0 = 0
66:52/0 = 0
69:52/0 = 0
70:52/0 = 0
71:52/0 = 0
72:52/0 = 0
74:52/0 = 0
75:52/0 = 0
76:52/0 = 0
77:52/0 = 0

[sub_resource type="TileSet" id="TileSet_yji33"]
sources/0 = SubResource("TileSetAtlasSource_is7oy")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buahv"]
size = Vector2(30, 23)

[node name="Items" type="Node2D"]
script = ExtResource("1_t4tb0")

[node name="item" type="Node2D" parent="."]
position = Vector2(-18, 25)
script = ExtResource("2_sxnej")

[node name="TileMapLayer" type="TileMapLayer" parent="item"]
position = Vector2(46, 30)
scale = Vector2(0.05, 0.05)
tile_map_data = PackedByteArray("AAABAPz/AAArAA8AAAAHAAUAAAAxABcAAAD//wIAAAApABUAAAD//wMAAAApABYAAAD//wQAAAApABcAAAAAAPz/AAAqAA8AAAAAAP//AAAqABIAAAAAAAAAAAAqABMAAAAAAAEAAAAqABQAAAAAAAIAAAAqABUAAAAAAAMAAAAqABYAAAAAAAQAAAAqABcAAAABAPv/AAArAA4AAAABAP3/AAArABAAAAABAP7/AAArABEAAAABAP//AAArABIAAAABAAAAAAArABMAAAABAAEAAAArABQAAAABAAIAAAArABUAAAABAAMAAAArABYAAAABAAQAAAArABcAAAABAAUAAAArABgAAAACAPv/AAAsAA4AAAACAPz/AAAsAA8AAAACAP3/AAAsABAAAAACAP7/AAAsABEAAAACAP//AAAsABIAAAACAAAAAAAsABMAAAACAAEAAAAsABQAAAACAAIAAAAsABUAAAACAAMAAAAsABYAAAACAAQAAAAsABcAAAACAAUAAAAsABgAAAADAPv/AAAtAA4AAAADAPz/AAAtAA8AAAADAP3/AAAtABAAAAADAP7/AAAtABEAAAADAP//AAAtABIAAAADAAAAAAAtABMAAAADAAEAAAAtABQAAAADAAIAAAAtABUAAAADAAMAAAAtABYAAAADAAQAAAAtABcAAAADAAUAAAAtABgAAAAEAPv/AAAuAA4AAAAEAPz/AAAuAA8AAAAEAP3/AAAuABAAAAAEAP7/AAAuABEAAAAEAP//AAAuABIAAAAEAAAAAAAuABMAAAAEAAEAAAAuABQAAAAEAAIAAAAuABUAAAAEAAMAAAAuABYAAAAEAAQAAAAuABcAAAAEAAUAAAAuABgAAAAFAPz/AAAvAA8AAAAFAP3/AAAvABAAAAAFAP7/AAAvABEAAAAFAP//AAAvABIAAAAFAAAAAAAvABMAAAAFAAEAAAAvABQAAAAFAAIAAAAvABUAAAAFAAMAAAAvABYAAAAFAAQAAAAvABcAAAAGAPz/AAAwAA8AAAAGAP3/AAAwABAAAAAGAP//AAAwABIAAAAGAAAAAAAwABMAAAAGAAEAAAAwABQAAAAGAAIAAAAwABUAAAAGAAMAAAAwABYAAAAGAAQAAAAwABcAAAAHAAMAAAAxABYAAAAHAAQAAAAxABcAAAA=")
tile_set = SubResource("TileSet_yji33")

[node name="TrashTexture" type="Sprite2D" parent="item"]
position = Vector2(49, 32)
region_rect = Rect2(0, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="item"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="item/Area2D"]
position = Vector2(49, 31.5)
shape = SubResource("RectangleShape2D_buahv")

[node name="LabelKeyboard" parent="item/Area2D" instance=ExtResource("4_lvia1")]
visible = true
position = Vector2(34, 17)

[connection signal="body_entered" from="item/Area2D" to="." method="in_area"]
[connection signal="body_exited" from="item/Area2D" to="." method="out_area"]
